--- a/Prelims_Sapusao.html
+++ b/Prelims_Sapusao.html
@@ -92,10 +92,11 @@
 
     <h1>Additional information</h1>
     <hr>
-    <img src="images/Screenshot 2024-02-21 233053.png" height="250">
-    <img src="images/cert 1.png" height="250">
-    <img src="images/cert 2.png" height="250">
-    <img src="images/cert 3.png" height="250">
+    <ul><i>
+     <li><p>Disaster Realities: What Creates and Sustains Disaster Risk via Zoom</p></li>
+     <li><p>Allyship and Men Froming a Safer Space for everyone</p></li>
+     <li><p>Smartbooks And Power BI Smartbooks Advance With Analytics</p></li>
+</ul></i>
 </body>
 
 </html>
